--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Kampüs Not Kontrol Botu
 on:
   schedule:
     - cron: "*/10 * * * *"  # her 10 dakikada bir
-       
+  workflow_dispatch:   
 
 jobs:
   run-bot:
