--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,23 @@ name: Not Takip Botu
 
 on:
   schedule:
-    - cron: "*/7 * * * *"
-  workflow_dispatch:
+    - cron: "*/7 * * * *"  # Her 7 dakikada bir çalışır
+  workflow_dispatch:  # Manuel çalıştırma
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      KULLANICI_ADI: ${{ secrets.KULLANICI_ADI }}
+      SIFRE: ${{ secrets.SIFRE }}
+      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      CHAT_ID: ${{ secrets.CHAT_ID }}
 
     steps:
     - name: 📥 Repo klonlanıyor
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: 🐍 Python kurulumu
       uses: actions/setup-python@v4
@@ -28,6 +35,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git pull origin main
         git add onceki_*.json
-        git commit -m "✅ Otomatik güncellenmiş JSON dosyaları" || echo "Değişiklik yok, commit yapılmadı"
-        git push
+        git commit -m "✅ Otomatik güncellenmiş JSON dosyaları" || echo "🔹 Değişiklik yok"
+        git push origin main
